# forfun

./: .gitignore
code/: .clang-format  CLAUDE.md  CMakeLists.txt  CODING_STYLE.md  Camera.cpp  Camera.h  Console.cpp  Console.h  GltfLoader.cpp  Mesh.cpp  ObjLoader.cpp  README.md  ROADMAP.md  Render.cpp  Render.h  Renderer.cpp  Renderer.h  SETUP_JSON.md  TextureLoader.h  Update.h  WinMain.cpp  main.cpp
code/.claude/: notify.ps1  settings.json  settings.local.json
code/.claude/commands/: git-commit.md
code/.claude/plans/: SSAO_PLAN.md
code/Core/: Console.cpp  Console.h  DX11Context.cpp  DX11Context.h  DebugEvent.cpp  DebugEvent.h  DebugPaths.h  FFAssetLoader.cpp  FFAssetLoader.h  FFLog.cpp  FFLog.h  GltfLoader.cpp  GltfLoader.h  GpuMeshResource.h  HdrLoader.cpp  HdrLoader.h  KTXExporter.cpp  KTXExporter.h  KTXLoader.cpp  MaterialAsset.cpp  MaterialAsset.h  MaterialManager.cpp  MaterialManager.h  Mesh.cpp  Mesh.h  MeshResourceManager.cpp  MeshResourceManager.h  ObjLoader.cpp  ObjLoader.h  Offscreen.cpp  Offscreen.h  PathManager.cpp  PathManager.h  ReflectionProbeAsset.cpp  ReflectionProbeAsset.h  RenderConfig.cpp  RenderConfig.h  RenderData.h  RenderDocCapture.cpp  RenderDocCapture.h  (+8 more)
code/Core/Exporter/: KTXExporter.cpp  KTXExporter.h
code/Core/Loader/: FFAssetLoader.cpp  FFAssetLoader.h  GltfLoader.cpp  GltfLoader.h  HdrLoader.cpp  KTXLoader.cpp  KTXLoader.h  LUTLoader.cpp  LUTLoader.h  ObjLoader.cpp  TextureLoader.cpp  TextureLoader.h
code/Core/RDG/: RDGBarrierBatcher.h  RDGBuilder.cpp  RDGBuilder.h  RDGCompiler.h  RDGContext.h  RDGHeapAllocator.h  RDGTypes.h
code/Core/Testing/: RenderStats.h  Screenshot.cpp  Screenshot.h  TestCase.cpp  TestCase.h  TestRegistry.h
code/Editor/: DebugPaths.h  DiagnosticLog.cpp  DiagnosticLog.h  EditorContext.cpp  EditorContext.h  HierarchyPanel.cpp  InspectorPanel.cpp  Panels.h  Panels_Dockspace.cpp  Panels_HDRExport.cpp  Panels_IrradianceDebug.cpp  Panels_MaterialEditor.cpp  Panels_SceneLightSettings.cpp  PickingUtils.cpp  PickingUtils.h  ViewportPanel.cpp
code/Engine/: Camera.cpp  Camera.h  Component.h  ComponentRegistry.h  GameObject.h  JsonPropertyVisitor.h  PropertyVisitor.h  Scene.cpp  Scene.h  SceneLightSettings.h  SceneSerializer.cpp  SceneSerializer.h  Update.cpp  Update.h  World.h
code/Engine/Components/: DirectionalLight.h  LightProbe.h  Material.h  MeshRenderer.cpp  MeshRenderer.h  PointLight.h  ReflectionProbe.h  SpotLight.h  Transform.h
code/Engine/Material/: MaterialConstants.h
code/Engine/Rendering/: AntiAliasingPass.cpp  AntiAliasingPass.h  AutoExposurePass.cpp  AutoExposurePass.h  BloomPass.cpp  BloomPass.h  ClusteredLightingPass.cpp  ClusteredLightingPass.h  ComputePassLayout.h  CubemapRenderer.cpp  CubemapRenderer.h  DebugLinePass.cpp  DebugLinePass.h  DebugRenderSystem.cpp  DebugRenderSystem.h  DepthOfFieldPass.cpp  DepthOfFieldPass.h  FSR2Context.cpp  FSR2Context.h  FSR2Pass.cpp  FSR2Pass.h  ForwardRenderPipeline.cpp  ForwardRenderPipeline.h  GridPass.cpp  GridPass.h  HiZPass.cpp  HiZPass.h  IBLGenerator.cpp  IBLGenerator.h  IPerFrameContributor.h  LightProbeBaker.cpp  LightProbeBaker.h  LightProbeManager.cpp  LightProbeManager.h  MainPass.cpp  MainPass.h  MotionBlurPass.cpp  MotionBlurPass.h  PassLayouts.h  PostProcessPass.cpp  (+23 more)
code/RHI/: CB_PerFrame.h  ICommandList.h  IDescriptorSet.h  IRenderContext.h  PerDrawSlots.h  PerFrameSlots.h  PerMaterialSlots.h  PerPassSlots.h  README.md  RHICommon.h  RHIDescriptors.h  RHIFactory.cpp  RHIFactory.h  RHIHelpers.cpp  RHIHelpers.h  RHIManager.cpp  RHIManager.h  RHIPointers.h  RHIRayTracing.h  RHIResources.h  ShaderCompiler.h
code/RHI/DX11/: DX11Buffer.cpp  DX11CommandList.cpp  DX11CommandList.h  DX11Context.h  DX11RenderContext.cpp  DX11RenderContext.h  DX11Resources.h  DX11ShaderCompiler.cpp  DX11Texture.cpp  DX11Utils.h
code/Shader/: AutoExposure.cs.hlsl  AutoExposure_DS.cs.hlsl  BloomDownsample.ps.hlsl  BloomThreshold.ps.hlsl  BloomUpsample.ps.hlsl  Bloom_DS.ps.hlsl  BrdfLut.ps.hlsl  BrdfLut.vs.hlsl  BrdfLut_DS.ps.hlsl  ClusteredLighting.compute.hlsl  ClusteredLighting_DS.cs.hlsl  ClusteredShading.hlsl  ClusteredShading_DS.hlsli  ClusteredShading_Optimized.hlsl  Common.hlsl  Common.hlsli  DebugLine.gs.hlsl  DebugLine.ps.hlsl  DebugLine.vs.hlsl  DebugLine_DS.gs.hlsl  DebugLine_DS.ps.hlsl  DebugLine_DS.vs.hlsl  DeferredLighting.ps.hlsl  DeferredLighting_DS.ps.hlsl  DepthPrePass_DS.vs.hlsl  DoFBlurH.ps.hlsl  DoFBlurV.ps.hlsl  DoFCoC.ps.hlsl  DoFComposite.ps.hlsl  DoFDownsampleSplit.ps.hlsl  DoF_DS.ps.hlsl  EquirectToCubemap.ps.hlsl  EquirectToCubemap.vs.hlsl  EquirectToCubemap_DS.ps.hlsl  EquirectToCubemap_DS.vs.hlsl  FXAA.ps.hlsl  Fullscreen.vs.hlsl  Fullscreen_DS.vs.hlsl  GBuffer.ps.hlsl  GBuffer.vs.hlsl  (+48 more)
code/Tests/: TestAlphaBlend.cpp  TestAlphaTest.cpp  TestAntiAliasing.cpp  TestAsyncTextureLoad.cpp  TestAutoExposure.cpp  TestBloom.cpp  TestClusteredLighting.cpp  TestColorGrading.cpp  TestCopyPaste.cpp  TestDXRBakeVisualize.cpp  TestDXRCubemapBaker.cpp  TestDXRReadback.cpp  TestDeferredPerf.cpp  TestDeferredStress.cpp  TestDescriptorSet.cpp  TestDoF.cpp  TestEmissive.cpp  TestFSR2.cpp  TestGBuffer.cpp  TestGPUReadback.cpp  TestHiZ.cpp  TestLightProbeIntegration.cpp  TestLightProbeSH.cpp  TestLightmap2D.cpp  TestLightmapUV2.cpp  TestMaterialAsset.cpp  TestMaterialTypes.cpp  TestMotionBlur.cpp  TestOIDNDenoiser.cpp  TestRDGBasic.cpp  TestRayCast.cpp  TestReflectionProbe.cpp  TestSSAO.cpp  TestSSR.cpp  TestSimplePointLight.cpp  TestSpotLight.cpp  TestTAA.cpp
code/docs/: ANTI_ALIASING.md  AUTO_EXPOSURE.md  BLOOM.md  CLAUDE_CODE_GUIDE.md  COLOR_GRADING.md  DEFERRED_DOCUMENT.md  DEFERRED_ROADMAP.md  DEPTH_OF_FIELD.md  DX12_3D_RENDERING_ROADMAP.md  DX12_MIGRATION_ROADMAP.md  DX12_STEP_BY_STEP.md  DXR_VERIFICATION_ROADMAP.md  DXR_VOLUMETRIC_LIGHTMAP_ROADMAP.md  EDITOR.md  FSR2.md  LIGHTMAP.md  MOTION_BLUR.md  POINT_LIGHT_OPTIMIZATION.md  RDG.md  RENDERING.md  RHI.md  RHI_MIGRATION_ROADMAP.md  SSAO.md  SSR.md  TAA.md  TESTING.md  TEXTURE_MANAGER.md  UNITY_VS_OURS_POINT_LIGHT.md  VOLUMETRIC_LIGHTMAP.md
openai_gen/dx11_primitives/: CMakeLists.txt
(+127 files in other folders)
